# passe

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  flake.nix  passe.opam  release.nix
.github/workflows/: nix.yml
example/: dune  verify.ml  verify.sh  verify_argon2.py  verify_bcrypt.py
nix/overlays/: default.nix  development.nix
src/: argon2.ml  argon2.mli  argon2_stub.c  bcrypt.c  bcrypt.h  bcrypt.ml  bcrypt.mli  bcrypt_stub.c  blf.c  blf.h  crypto.ml  dune  hash.ml  hash.mli  passe.ml  passe.mli
src/argon2/: argon2.c  argon2.h  blake2-impl.h  blake2.h  blake2b.c  core.c  core.h  encoding.c  encoding.h  ref.c  thread.c  thread.h
test/: dune  test.ml  test_argon2.ml  test_bcrypt.ml
