(include_subdirs unqualified)

(library
 (foreign_stubs
  (language c)
  (names
   bcrypt_stub
   blf
   bcrypt
   argon2_stub
   argon2
   core
   encoding
   thread
   ref
   blake2b)
  (flags
   :standard
   -I./argon2/
   -Wall
   -Wbad-function-cast
   -Wcast-align
   -Wstrict-prototypes
   -Wshadow
   -Wpointer-arith
   -Wno-type-limits))
 (name passe)
 (public_name passe)
 (synopsis "Password hashes implementation (bcrypt and argon2)")
 (libraries unix mirage-crypto mirage-crypto-rng mirage-crypto-rng.unix))
